# libipc

./: .gitignore  CMakeLists.txt  dev.bat
src/: CMakeLists.txt  lockable.h  scoped_lock.hpp  system.cpp  system.h
src/include/: lockable.h
src/include/named_mutex/: named_mutex.h  unix_named_mutex.h  windows_named_mutex.h
src/include/pipe/: pipe_exception.h
src/named_mutex/: named_mutex.cpp  named_mutex_exception.cpp  named_mutex_exception.h  unix_named_mutex.cpp  unix_named_mutex.h  windows_named_mutex.cpp  windows_named_mutex.h
src/pipe/: CMakeLists.txt  pipe.cpp  pipe.h  pipe_exception.cpp  unix_pipe.cpp  unix_pipe.h  windows_pipe.cpp  windows_pipe.h
src/src/: system.cpp  system.h
src/src/named_mutex/: named_mutex.cpp  named_mutex_exception.cpp  unix_named_mutex.cpp  windows_named_mutex.cpp
src/src/pipe/: pipe.cpp  pipe_exception.cpp  unix_pipe.cpp  windows_pipe.cpp
tests/: CMakeLists.txt
tests/test_named_mutex/: CMakeLists.txt  main.cpp
tests/test_pipe_receiver/: CMakeLists.txt  main.cpp
tests/test_pipe_sender/: CMakeLists.txt  main.cpp
