########################## Basic ##########################
PROJECT(ipc)

FILE(GLOB_RECURSE INCLUDE_FILES
    ${PROJECT_SOURCE_DIR}/*.h
    ${PROJECT_SOURCE_DIR}/*.hpp
)

FILE(GLOB_RECURSE SOURCE_FILES
    ${PROJECT_SOURCE_DIR}/*.c
    ${PROJECT_SOURCE_DIR}/*.cpp
)

SET(ALL_FILES
    ${INCLUDE_FILES}
    ${SOURCE_FILES}
)

SOURCE_GROUP("Header Files" FILES "${INCLUDE_FILES}")
SOURCE_GROUP("Source Files" FILES "${SOURCE_FILES}")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/src
    ${PROJECT_SOURCE_DIR}/include
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    STATIC
    ${ALL_FILES}
)
###########################################################


IF(UNIX)
    SET(EX_LINK_LIBRARIES pthread)
ELSE(UNIX)
    SET(EX_LINK_LIBRARIES)
ENDIF(UNIX)
# Link external libraries.
TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${EX_LINK_LIBRARIES}
)

INSTALL(
    DIRECTORY "${PROJECT_SOURCE_DIR}/include/"
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
